[package]
name = "logging"
description = "The shared logging setup for The Hacker App services"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/TheHackerApp/logging"
repository = "https://github.com/TheHackerApp/logging.git"
edition = "2021"
publish = ["wafflehacks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
