[package]
name = "logging"
description = "The shared logging setup for The Hacker App services"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/TheHackerApp/logging"
repository = "https://github.com/TheHackerApp/logging.git"
edition = "2021"
publish = ["wafflehacks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
opentelemetry = { version = "0.20", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.13", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls", "tls", "tls-roots", "trace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = { version = "0.21", default-features = false, features = ["tracing-log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
