[package]
name = "logging"
description = "The shared logging setup for The Hacker App services"
version = "0.1.2"
license = "MIT"
homepage = "https://github.com/TheHackerApp/logging"
repository = "https://github.com/TheHackerApp/logging.git"
edition = "2021"
publish = ["wafflehacks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { git = "https://github.com/TheHackerApp/async-graphql.git", branch = "axum-7", default-features = false, optional = true }
async-trait = { version = "0.1", optional = true }
eyre = "0.6"
http = { version = "1", optional = true }
opentelemetry = { version = "0.21", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.14", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls", "tls", "tls-roots", "trace"], optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
tower = { version = "0.4", default-features = false, optional = true }
tower-http = { version = "0.5", default-features = false, features = ["trace"], optional = true }
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = { version = "0.22", default-features = false, features = ["tracing-log"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = []
graphql = ["dep:async-graphql", "dep:async-trait"]
http = ["dep:http", "dep:tower", "dep:tower-http", "dep:uuid"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
